kustomization/components/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nakka
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
