kustomization/components/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ankka-gateway
  labels:
    app.kubernetes.io/managed-by: ankka
